re PR c++/15142 (Internal compiler error when passing a string where a char* is expecteted in a throw statement)

PR c++/15142
        * call.c (call_builtin_trap): Remove type parm.
        (convert_arg_to_ellipsis): Change a non-POD argument to integer type.
        (build_x_va_arg): Dereference a null pointer for a non-POD argument.

From-SVN: r82581